# inf3600-project

./: .gitignore  README.md
backend/: pyproject.toml
datasets/: README.md
experiment/: README.md  pyproject.toml  z-image.py
experiment/src/: rss-gemma.py  rss-qwen.py  rss.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  MapView.tsx  PromptPanel.tsx  api.ts
notebooks/: 001_sd-inpaint.ipynb  002_lora_finetune.ipynb  pyproject.toml  qwen-image-edit.ipynb  test_notebook.ipynb  train_houses_lora.ipynb  train_trees_lora.ipynb
notebooks/lora-satellite-inpaint/checkpoint-1000/: adapter_config.json  adapter_model.safetensors
notebooks/lora-satellite-inpaint/checkpoint-1500/: adapter_model.safetensors
notebooks/lora-satellite-inpaint/checkpoint-2000/: adapter_model.safetensors
notebooks/lora-satellite-inpaint/checkpoint-500/: README.md  adapter_model.safetensors
notebooks/scripts/: prepare_morocco_buildings_lora_dataset.py  prepare_wroclaw_trees_lora_dataset.py
