[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diffusers",
    "requests>=2.33.0",
    "transformers[torch]>=5.4.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
