[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "diffusers",
    "feedparser>=6.0.12",
    "requests>=2.33.0",
    "torch>=2.11.0",
    "transformers[torch]>=5.4.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
