[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "diffusers>=0.37.1",
    "ipycanvas>=0.14.3",
    "ipympl>=0.10.0",
    "ipyopenlayers>=0.2.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
